# src/main/kotlin/me/spradling/gift/core/api/models/Account.kt
@@ -1,4 +1,20 @@
 package me.spradling.gift.core.api.models
 
-class Account {
+import com.fasterxml.jackson.annotation.JsonCreator
+import com.fasterxml.jackson.annotation.JsonProperty
+import org.mindrot.jbcrypt.BCrypt
+
+class Account @JsonCreator constructor(
+    @JsonProperty("group")
+    val groupId: String?,
+    @JsonProperty("firstName")
+    val firstName: String?,
+    @JsonProperty("lastName")
+    val lastName: String?,
+    @JsonProperty("email")
+    val email: String?,
+    @JsonProperty("password")
+    password: String?
+) {
+  val password : String? = BCrypt.hashpw(password, BCrypt.gensalt())
 }
