# src/main/kotlin/me/spradling/gift/core/database/models/Account.kt
@@ -1,0 +1,10 @@
+package me.spradling.gift.core.database.models
+
+class Account constructor(
+    val accountId: String,
+    val groupId: String,
+    val firstName: String,
+    val lastName: String,
+    val email: String,
+    val password: String
+)
